src/client/snapshots/rusty_tube__client__player__tests__map_player_data_ios.snap
---
source: src/client/player.rs
expression: player_data
---
info:
  id: pPvd8UxmSbQ
  title: Inspiring Cinematic Uplifting (Creative Commons)
  description: "► Download Music: http://bit.ly/2QLufeh\nImportant to know! You can download this track for free through Patreon. You will pay only for new tracks! So join others and let's make next track together!\n\n► MORE MUSIC: Become my patron and get access to all our music from Patreon library. More Info here: http://bit.ly/2JJDFHb\n\n► Additional edit versions of this track you can download here: http://bit.ly/2WdRinT (5 versions)\n--------------------- \n\n►DESCRIPTION:\nInspiring Cinematic Uplifting Trailer Background - epic music for trailer video project with powerful drums, energetic orchestra and gentle piano melody. This motivational cinematic theme will work as perfect background for beautiful epic moments, landscapes, nature, drone video, motivational products and achievements.\n--------------------- \n\n► LICENSE:\n● If you need a license for your project, you can purchase it here: \nhttps://1.envato.market/ajicu (Audiojungle)\nhttps://bit.ly/3fWZZuI (Pond5)\n--------------------- \n\n► LISTEN ON:\n● Spotify - https://spoti.fi/2sHm3UH\n● Apple Music - https://apple.co/3qBjbUO\n--------------------- \n\n► SUBSCRIBE FOR MORE: \nPatreon: http://bit.ly/2JJDFHb\nYoutube: http://bit.ly/2AYBzfA\nFacebook: http://bit.ly/2T6dTx5\nInstagram: http://bit.ly/2BHJ8rB\nTwitter: http://bit.ly/2MwtOlT\nSoundCloud: http://bit.ly/2IwVVmt\nAudiojungle: https://1.envato.market/ajrsm\nPond5: https://bit.ly/2TLi1rW\n--------------------- \n►Photo by Vittorio Staffolani from Pexels\n--------------------- \n\nFAQ:\n\n► Can I use this music in my videos? \n● Sure! Just download this track and you are ready to use it! We only ask to credit us. \n-------------------- \n\n► What is \"Creative Commons\"? \nCreative Commons is a system that allows you to legally use “some rights reserved” music, movies, images, and other content — all for free. Licensees may copy, distribute, display and perform the work and make derivative works and remixes based on it only if they give the author or licensor the credits.\n-------------------- \n\n► Will I have any copyright issues with this track?\n● No, you should not have any copyright problems with this track!\n-------------------- \n\n► Is it necessary to become your patron?\n● No it's not necessary. But we recommend you to become our patron because you will get access to huge library of music. You will download only highest quality files. You will find additional edited versions of every track. You always be tuned with our news. You will find music not only from Roman Senyk but also from another talented authors.\n-------------------- \n\n► Why I received a copyright claim when I used this track?\n● Do not panic! This is very common situation. Content ID fingerprint system can mismatch our music. Just dispute the claim by showing our original track. Or send us the link to your video (romansenykmusic@gmail.com) and attach some screenshot with claim information. Claim will be released until 24 hours!\n\n► How to credit you in my video?\n● Just add to the description of your project information about Author, Name of Song and the link to our original track. Or copy and paste:\n\nMusic Info: Inspiring Cinematic Uplifting by RomanSenykMusic.\nMusic Link: https://youtu.be/pPvd8UxmSbQ\n--------------------- \n\n► If you have any questions, you can write in the comments for this video or by email: romansenykmusic@gmail.com\n--------------------- \n\nStay tuned! The best is yet to come! \nThanks For Listening!\nRoman Senyk"
  length: 163
  thumbnails:
    - url: "https://i.ytimg.com/vi/pPvd8UxmSbQ/mqdefault.jpg"
      width: 320
      height: 180
    - url: "https://i.ytimg.com/vi/pPvd8UxmSbQ/hqdefault.jpg"
      width: 480
      height: 360
    - url: "https://i.ytimg.com/vi/pPvd8UxmSbQ/sddefault.jpg"
      width: 640
      height: 480
  channel_id: UCbxxEi-ImPlbLx5F-fHetEg
  channel_name: RomanSenykMusic - Royalty Free Music
  publish_date: ~
  view_count: 426567
  keywords:
    - no copyright music
    - background music
    - copyright free music
    - non copyrighted music
    - free music
    - no copyright music cinematic
    - inspiring music
    - inspiring background music
    - cinematic music
    - cinematic background music
    - no copyright music inspiring
    - free music no copyright
    - uplifting music
    - trailer music no copyright
    - trailer music
    - download music
    - free background music
    - orchestral music
    - romansenykmusic
    - motivational music
    - montage music
  category: ~
  is_live_content: false
  is_family_safe: ~
video_streams: []
video_only_streams:
  - url: "https://rr4---sn-h0jelnez.googlevideo.com/videoplayback?expire=1659481355&ei=q1jpYq-xHs7NgQev0bfwAQ&ip=2003%3Ade%3Aaf0e%3A2f00%3Ade47%3A297%3Aa6db%3A774e&id=o-ANNg3iPHI56jhLSlPQk4pi4mdub5iAby0hmJBVrtiJgY&itag=134&source=youtube&requiressl=yes&mh=mQ&mm=31%2C29&mn=sn-h0jelnez%2Csn-h0jeenek&ms=au%2Crdu&mv=m&mvi=4&pl=37&initcwndbps=1513750&vprv=1&svpuc=1&mime=video%2Fmp4&gir=yes&clen=7808990&otfp=1&dur=163.029&lmt=1580005649163759&mt=1659459429&fvip=5&keepalive=yes&fexp=24001373%2C24007246&c=IOS&rbqsm=fr&txp=2211222&sparams=expire%2Cei%2Cip%2Cid%2Citag%2Csource%2Crequiressl%2Cvprv%2Csvpuc%2Cmime%2Cgir%2Cclen%2Cotfp%2Cdur%2Clmt&sig=AOq0QJ8wRgIhAMFQo_RyC3Ud44QVGtKckMcuq5UQ3J7CgYsYl0bXaWMUAiEAhMi1h0ru4zoIGX0jBZT23dozvtrhf_m61p4qbAfEhZo%3D&lsparams=mh%2Cmm%2Cmn%2Cms%2Cmv%2Cmvi%2Cpl%2Cinitcwndbps&lsig=AG3C_xAwRQIgWKVoDpyI6QmVnkdGzdirFtjMAXhmLex64VTO7UUJd-4CIQDoJKkT2-Kpa7j0merJJoZDs4IkkXSjdNm3bvdCL8t2Pg%3D%3D"
    itag: 134
    bitrate: 538143
    average_bitrate: 383195
    size: 7808990
    index_range:
      start: 740
      end: 1155
    init_range:
      start: 0
      end: 739
    width: 640
    height: 360
    fps: 30
    quality: 360p
    hdr: false
    mime: "video/mp4; codecs=\"avc1.4D401E\""
    codec: avc1
  - url: "https://rr4---sn-h0jelnez.googlevideo.com/videoplayback?expire=1659481355&ei=q1jpYq-xHs7NgQev0bfwAQ&ip=2003%3Ade%3Aaf0e%3A2f00%3Ade47%3A297%3Aa6db%3A774e&id=o-ANNg3iPHI56jhLSlPQk4pi4mdub5iAby0hmJBVrtiJgY&itag=299&source=youtube&requiressl=yes&mh=mQ&mm=31%2C29&mn=sn-h0jelnez%2Csn-h0jeenek&ms=au%2Crdu&mv=m&mvi=4&pl=37&initcwndbps=1513750&vprv=1&svpuc=1&mime=video%2Fmp4&gir=yes&clen=65400181&otfp=1&dur=163.046&lmt=1580005649161486&mt=1659459429&fvip=5&keepalive=yes&fexp=24001373%2C24007246&c=IOS&rbqsm=fr&txp=2211222&sparams=expire%2Cei%2Cip%2Cid%2Citag%2Csource%2Crequiressl%2Cvprv%2Csvpuc%2Cmime%2Cgir%2Cclen%2Cotfp%2Cdur%2Clmt&sig=AOq0QJ8wRgIhAP6zxXXA18ToZWUfalauhhsgOsDHTu-R0QrqNrJR7D5kAiEAi8HBa9OkYwmA0bcRxhgvXfN9JsFlXwCWJ-x4ty6TjoY%3D&lsparams=mh%2Cmm%2Cmn%2Cms%2Cmv%2Cmvi%2Cpl%2Cinitcwndbps&lsig=AG3C_xAwRQIgWKVoDpyI6QmVnkdGzdirFtjMAXhmLex64VTO7UUJd-4CIQDoJKkT2-Kpa7j0merJJoZDs4IkkXSjdNm3bvdCL8t2Pg%3D%3D"
    itag: 299
    bitrate: 4190323
    average_bitrate: 3208919
    size: 65400181
    index_range:
      start: 740
      end: 1155
    init_range:
      start: 0
      end: 739
    width: 1920
    height: 1080
    fps: 60
    quality: 1080p60
    hdr: false
    mime: "video/mp4; codecs=\"avc1.64002A\""
    codec: avc1
audio_streams:
  - url: "https://rr4---sn-h0jelnez.googlevideo.com/videoplayback?expire=1659481355&ei=q1jpYq-xHs7NgQev0bfwAQ&ip=2003%3Ade%3Aaf0e%3A2f00%3Ade47%3A297%3Aa6db%3A774e&id=o-ANNg3iPHI56jhLSlPQk4pi4mdub5iAby0hmJBVrtiJgY&itag=139&source=youtube&requiressl=yes&mh=mQ&mm=31%2C29&mn=sn-h0jelnez%2Csn-h0jeenek&ms=au%2Crdu&mv=m&mvi=4&pl=37&initcwndbps=1513750&vprv=1&svpuc=1&mime=audio%2Fmp4&gir=yes&clen=995840&otfp=1&dur=163.189&lmt=1580005582214385&mt=1659459429&fvip=5&keepalive=yes&fexp=24001373%2C24007246&c=IOS&rbqsm=fr&txp=2211222&sparams=expire%2Cei%2Cip%2Cid%2Citag%2Csource%2Crequiressl%2Cvprv%2Csvpuc%2Cmime%2Cgir%2Cclen%2Cotfp%2Cdur%2Clmt&sig=AOq0QJ8wRgIhAMXDvZZznm1LafIKh_pdGf-TjY5Kz-F9N67o6gXenKouAiEA5qji45i5ABmAytPDOORjw0OaBmwX88S7bgUWcmF-_LU%3D&lsparams=mh%2Cmm%2Cmn%2Cms%2Cmv%2Cmvi%2Cpl%2Cinitcwndbps&lsig=AG3C_xAwRQIgWKVoDpyI6QmVnkdGzdirFtjMAXhmLex64VTO7UUJd-4CIQDoJKkT2-Kpa7j0merJJoZDs4IkkXSjdNm3bvdCL8t2Pg%3D%3D"
    itag: 139
    bitrate: 49724
    average_bitrate: 48818
    size: 995840
    index_range:
      start: 641
      end: 876
    init_range:
      start: 0
      end: 640
    mime: "audio/mp4; codecs=\"mp4a.40.5\""
    codec: mp4a
  - url: "https://rr4---sn-h0jelnez.googlevideo.com/videoplayback?expire=1659481355&ei=q1jpYq-xHs7NgQev0bfwAQ&ip=2003%3Ade%3Aaf0e%3A2f00%3Ade47%3A297%3Aa6db%3A774e&id=o-ANNg3iPHI56jhLSlPQk4pi4mdub5iAby0hmJBVrtiJgY&itag=140&source=youtube&requiressl=yes&mh=mQ&mm=31%2C29&mn=sn-h0jelnez%2Csn-h0jeenek&ms=au%2Crdu&mv=m&mvi=4&pl=37&initcwndbps=1513750&vprv=1&svpuc=1&mime=audio%2Fmp4&gir=yes&clen=2640283&otfp=1&dur=163.096&lmt=1580005579712232&mt=1659459429&fvip=5&keepalive=yes&fexp=24001373%2C24007246&c=IOS&rbqsm=fr&txp=2211222&sparams=expire%2Cei%2Cip%2Cid%2Citag%2Csource%2Crequiressl%2Cvprv%2Csvpuc%2Cmime%2Cgir%2Cclen%2Cotfp%2Cdur%2Clmt&sig=AOq0QJ8wRQIgcsPm6rrUAwCi1VTGf0FMDTjzjM01__iTC13PnzDTFeQCIQCJ_EGeKVZztkmK3Cr7gVuxUP83XCSlP01YLx5FO-PPcQ%3D%3D&lsparams=mh%2Cmm%2Cmn%2Cms%2Cmv%2Cmvi%2Cpl%2Cinitcwndbps&lsig=AG3C_xAwRQIgWKVoDpyI6QmVnkdGzdirFtjMAXhmLex64VTO7UUJd-4CIQDoJKkT2-Kpa7j0merJJoZDs4IkkXSjdNm3bvdCL8t2Pg%3D%3D"
    itag: 140
    bitrate: 130268
    average_bitrate: 129508
    size: 2640283
    index_range:
      start: 632
      end: 867
    init_range:
      start: 0
      end: 631
    mime: "audio/mp4; codecs=\"mp4a.40.2\""
    codec: mp4a
subtitles:
  - url: "https://www.youtube.com/api/timedtext?v=pPvd8UxmSbQ&caps=asr&xoaf=5&hl=en&ip=0.0.0.0&ipbits=0&expire=1659484955&sparams=ip,ipbits,expire,v,caps,xoaf&signature=A9D9281218AFF99DC34B5AA2F44D33455F419673.44DBC65B8479A5F088D6136FC4364894EECB3E0E&key=yt8&lang=en"
    lang: en
    lang_name: English
    auto_generated: false
expires_in_seconds: 21540

